added the functionality of recalling what todos were completed by the user even after refresh/reload.feat(todo): persist completed todos using localStorage

--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
 
 <body>
   <header>
-    <h1>TODO BUDDIE</h1>
+    <h1>TODO BUDDY</h1>
   </header>
 
   <main>
     <section>
       <div class="section-container">
         <div class="input-field">
-          <input class="js-input-field" placeholder="Write anything and hit enter to add" type="text">
+          <input class="js-input-field" placeholder="Write anything and hit 'Enter' to add." type="text">
           <button class="add-btn js-add-btn">ADD</button>
         </div>
 
         <ul class="todo-list js-todo-holder">
-
         </ul>
       </div>
     </section>
