feat(todo): persist completed todos after page reload.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section>
       <div class="section-container">
         <div class="input-field">
-          <input class="js-input-field" placeholder="Write anything and hit 'Enter' to add." type="text">
+          <input class="js-input-field" placeholder="Write anything and hit enter to add" type="text">
           <button class="add-btn js-add-btn">ADD</button>
         </div>
 
